--- a/Dockerfileasdddd
+++ b/Dockerfileasdddd
@@ -6,5 +6,5 @@ COPY index.php /var/www/html/
 # Set permissions
 RUN chown -R www-data:www-data /var/www/html
 
-# Expose port 80
+# Expose port 80d
 EXPOSE 80
