--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,23 +26,22 @@ spec:
             cpu: "200m"
         readinessProbe:
           httpGet:
-            path: /healthz.php            # Create this tiny file in your app
+            path: /healthz.php           
             port: 80
-          initialDelaySeconds: 5          # PHP apps usually start fast
+          initialDelaySeconds: 5         
           periodSeconds: 5
           timeoutSeconds: 3
           successThreshold: 1
-          failureThreshold: 3             # ~15s until pod is marked NotReady
+          failureThreshold: 3             
 
-        # Liveness Probe — is the container deadlocked or crashed?
         livenessProbe:
           httpGet:
             path: /healthz.php
             port: 80
-          initialDelaySeconds: 15         # Give it a little more time than readiness
+          initialDelaySeconds: 15     
           periodSeconds: 20
           timeoutSeconds: 5
-          failureThreshold: 3             # Restart after ~60s of consecutive failures
+          failureThreshold: 3            
 
 ---
 apiVersion: v1
