--- a/.github/workflows/mains.yaml
+++ b/.github/workflows/mains.yaml
@@ -6,8 +6,13 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  id-token: write  # Required for OIDC #########  
+
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  PROJECT_NUMBER: ${{ secrets.GCP_PROJECT_NUMBER }}
   IMAGE: php-app
   GKE_CLUSTER: test-dev
   GKE_ZONE: asia-southeast1-a
@@ -15,7 +20,7 @@ env:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted-2
     steps:
       - uses: actions/checkout@v4
       
@@ -40,16 +45,18 @@ jobs:
 
   build-and-deploy:
     needs: test
-    runs-on: ubuntu-latest
+    runs-on: self-hosted-2
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v2'
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          workload_identity_provider: 'projects/${{ env.PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-action-2/providers/github'
+          service_account: 'github-action-2@strategic-arc-258803.iam.gserviceaccount.com'
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
@@ -69,7 +76,7 @@ jobs:
 
       - name: Get GKE credentials
         run: |
-          gcloud container clusters get-credentials $GKE_CLUSTER \
+            gcloud container clusters get-credentials $GKE_CLUSTER \
             --zone $GKE_ZONE \
             --project $PROJECT_ID
 
