--- a/.github/workflows/mains.yaml
+++ b/.github/workflows/mains.yaml
@@ -56,7 +56,7 @@ jobs:
         uses: 'google-github-actions/auth@v2'
         with:
           workload_identity_provider: 'projects/${{ env.PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-action-2/providers/github'
-          service_account: 'github-action-2@strategic-arc-258803.iam.gserviceaccount.com'
+          service_account: 'github-actions@strategic-arc-258803.iam.gserviceaccount.com'
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
