--- a/.github/workflows/mains.yaml
+++ b/.github/workflows/mains.yaml
@@ -51,8 +51,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
+      - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v2'
         with:
           workload_identity_provider: 'projects/${{ env.PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-action-2/providers/github'
